fixed overlay on mobile and links

--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -358,8 +358,12 @@ footer
     display: none
   .cards
     display: block
+  .skew-pages_overlay
+    display: none
 @media(orientation: portrait)
   .skew-pages
     display: none
   .cards
     display: block
+  .skew-pages_overlay
+    display: none
